# roblox-read-mcp

./: .gitignore  Cargo.toml  README.md
plugin/: default.project.json
plugin/src/: BridgeClient.luau  Crypto.luau  IndexStore.luau  Main.server.luau  Profiles.luau  SearchEngine.luau  Ui.luau
plugin/tests/: ContractChecks.luau
scripts/: build-plugin.sh  check-luau-contracts.sh  install-mcp.sh
src/: config.rs  errors.rs  main.rs  mcp.rs  protocol.rs  session.rs  ws_bridge.rs
