[package]
name = "roblox-read-mcp"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Secure read-only Roblox DataModel MCP bridge"

[dependencies]
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
hmac = "0.12"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
tokio = { version = "1.43", features = ["io-std", "io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = { version = "0.24", default-features = false, features = ["handshake"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
serde_json = "1"

[lints.clippy]
pedantic = "deny"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

[lints.rust]
unsafe_code = "forbid"
unused_lifetimes = "deny"
unused_crate_dependencies = "deny"
unused_imports = "deny"
